# CMake_Makefile_Notes

CMake Folder/Chapter_1/: Chapter 1.md
CMake Folder/Chapter_2/: CMakeLists.txt  Chapter 2.md  main.cpp
CMake Folder/Chapter_2/Part 2 Library Stuff/: CMakeLists.txt  adder.cpp  adder.h
Makefile Notes/: notes.md  someExample.md
Makefile Notes/MakeFile Notes/: notes.md
Makefile Notes/MakeFile Notes/Hello World Makefile/: Makefile
